feat: harden backend security (default-deny, IDOR ownership, validation)
- SecurityConfig: default-deny (only /api/auth/** public), CORS origins
  from env var instead of wildcard
- SecurityUtils.checkOwnership() enforced across all financial services
  (Gasto, Ingreso, Meta, Presupuesto, CuentaBancaria, Reporte,
  Notificacion, Configuracion, GastoRecurrente, Categoria) plus
  UsuarioServiceImpl password change, closing IDOR gaps
- JwtAuthenticationFilter rejects disabled/locked accounts at auth time
- GlobalExceptionHandler: dedicated ForbiddenException handling, generic
  500 message instead of leaking raw exception text, logs unhandled
  exceptions server-side
- Bean validation annotations on Save/Update DTOs, wired with @Valid
  on controllers
- RateLimitFilter thresholds configurable via properties, scheduled
  cleanup of stale IP entries
- ddl-auto set to validate now that Flyway owns schema migrations
- Removed unused util classes (DateUtils, EncryptionUtils, FileUtils)

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>